[gd_scene load_steps=6 format=3 uid="uid://tmbdxyb0nl5g"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_t17yt"]
[ext_resource type="PackedScene" uid="uid://b6kquduk311op" path="res://scenes/title_menu.tscn" id="2_lju0k"]
[ext_resource type="Script" path="res://scenes/VideoStreamPlayer.gd" id="2_ybaes"]
[ext_resource type="PackedScene" uid="uid://ds05gfshtd7mu" path="res://scenes/UI/status_bars.tscn" id="5_xa744"]
[ext_resource type="PackedScene" uid="uid://ykw1mx2vsuqd" path="res://scenes/UI/command_menu.tscn" id="7_niv6i"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t17yt")

[node name="game_window" type="Node" parent="."]

[node name="current_level" type="Node" parent="game_window"]

[node name="title_menu" parent="game_window/current_level" instance=ExtResource("2_lju0k")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="UI"]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand = true
script = ExtResource("2_ybaes")

[node name="command_menu" parent="UI" instance=ExtResource("7_niv6i")]
visible = false
offset_left = -1.0
offset_right = -1.0
scale = Vector2(0.9, 0.9)

[node name="status_bars" parent="UI" instance=ExtResource("5_xa744")]
visible = false

[connection signal="cutscene_ended" from="UI/VideoStreamPlayer" to="." method="_on_video_stream_player_cutscene_ended"]
[connection signal="cutscene_started" from="UI/VideoStreamPlayer" to="." method="_on_video_stream_player_cutscene_started"]
[connection signal="finished" from="UI/VideoStreamPlayer" to="UI/VideoStreamPlayer" method="_on_finished"]
